Redemptions, fees, raw datasets to bigquery

--- a/notebooks/swaps.ipynb
+++ b/notebooks/swaps.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "from mezo.currency_utils import format_musd_currency_columns, get_token_prices\n",
     "from mezo.datetime_utils import format_datetimes\n",
     "from mezo.data_utils import add_rolling_values, add_pct_change_columns, add_cumulative_columns\n",
-    "from mezo.clients import BigQueryClient, SubgraphClient, Web3Client\n",
+    "from mezo.clients import SubgraphClient\n",
     "\n",
     "load_dotenv(dotenv_path='../.env', override=True)\n",
     "COINGECKO_KEY = os.getenv('COINGECKO_KEY')"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -100,6 +100,11 @@
       "Fetching transactions with skip=14000...\n",
       "Fetching transactions with skip=15000...\n",
       "Fetching transactions with skip=16000...\n",
+      "Fetching transactions with skip=17000...\n",
+      "Fetching transactions with skip=18000...\n",
+      "Fetching transactions with skip=19000...\n",
+      "Fetching transactions with skip=20000...\n",
+      "Fetching transactions with skip=21000...\n",
       "No more records found.\n"
      ]
     }
