--- a/notebooks/vaults_work.ipynb
+++ b/notebooks/vaults_work.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,9 +75,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching transactions with skip=0...\n",
+      "Fetching transactions with skip=1000...\n",
+      "Fetching transactions with skip=2000...\n",
+      "Fetching transactions with skip=3000...\n",
+      "Fetching transactions with skip=4000...\n",
+      "Fetching transactions with skip=5000...\n",
+      "Fetching transactions with skip=6000...\n",
+      "Fetching transactions with skip=7000...\n",
+      "Fetching transactions with skip=8000...\n",
+      "No more records found.\n"
+     ]
+    }
+   ],
    "source": [
     "# Fetch subgraph data\n",
     "vaults =  vault.fetch_subgraph_data(GET_VAULT_TRANSFERS, 'transfers')"
@@ -85,9 +102,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp_</th>\n",
+       "      <th>from</th>\n",
+       "      <th>to</th>\n",
+       "      <th>value</th>\n",
+       "      <th>transactionHash_</th>\n",
+       "      <th>block_number</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1756298984</td>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>0xe3884a72546f65944df71d7199c038270519511b</td>\n",
+       "      <td>10000000000000000</td>\n",
+       "      <td>0x4606b5c80e127598a3546c1a909df5022087f658347d...</td>\n",
+       "      <td>2740482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1756298408</td>\n",
+       "      <td>0xcd4c4ac79098310d63537ecf519d36412077200c</td>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>1068275890279924972659</td>\n",
+       "      <td>0x16b0221286022113b3bd28e6c9c80c45195adc8db29b...</td>\n",
+       "      <td>2740322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1756298041</td>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>0xb0e5453ed14b2e17e41d35e114f5c530bd604361</td>\n",
+       "      <td>219000000000000000000</td>\n",
+       "      <td>0x7dc48d37f8ce9f9819e1d9377df4630406b513293e7e...</td>\n",
+       "      <td>2740220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1756295259</td>\n",
+       "      <td>0x91ad95702fedc4b83843d3f3aaaa9f0ef68f71ff</td>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>571550118709272009661</td>\n",
+       "      <td>0x33ac0f0c54ea241a7669c2fe2614badc1f5fb4305c92...</td>\n",
+       "      <td>2739446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1756295201</td>\n",
+       "      <td>0xb2991c8dd07969d09856da81c6143d2d12c84e56</td>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>11850354755871040981</td>\n",
+       "      <td>0xb9d7a997bc8f5aae1d18f87ee9009ce63e4e61fccddf...</td>\n",
+       "      <td>2739430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7798</th>\n",
+       "      <td>1750924920</td>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>0x6e80164ea60673d64d5d6228beb684a1274bb017</td>\n",
+       "      <td>1000000000000000000</td>\n",
+       "      <td>0xf94447d87f136b744db7d595d441d468fca44162c337...</td>\n",
+       "      <td>1257108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7799</th>\n",
+       "      <td>1750899066</td>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>0x83db892a6688b966122be219fa873bf24d7db79f</td>\n",
+       "      <td>5000000000000000000</td>\n",
+       "      <td>0x6a633ddd97ece5fd9c72271c72745a20c75635f93932...</td>\n",
+       "      <td>1250310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7800</th>\n",
+       "      <td>1750894224</td>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>0x83db892a6688b966122be219fa873bf24d7db79f</td>\n",
+       "      <td>10000000000000000000</td>\n",
+       "      <td>0xb1414979063a26c67326912e08202b38a096e43456aa...</td>\n",
+       "      <td>1249036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7801</th>\n",
+       "      <td>1750853682</td>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>0x6e80164ea60673d64d5d6228beb684a1274bb017</td>\n",
+       "      <td>1000000000000000000</td>\n",
+       "      <td>0xeadd15fb5deaf6f11e2bfd1a9421ae40de826f8a5e3e...</td>\n",
+       "      <td>1238184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7802</th>\n",
+       "      <td>1750852804</td>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>0x6e80164ea60673d64d5d6228beb684a1274bb017</td>\n",
+       "      <td>1000000000000000000</td>\n",
+       "      <td>0x49e08d2de4d1afa5837841699f296f82ee34e8da7d56...</td>\n",
+       "      <td>1237938</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7803 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      timestamp_                                        from  \\\n",
+       "0     1756298984  0x0000000000000000000000000000000000000000   \n",
+       "1     1756298408  0xcd4c4ac79098310d63537ecf519d36412077200c   \n",
+       "2     1756298041  0x0000000000000000000000000000000000000000   \n",
+       "3     1756295259  0x91ad95702fedc4b83843d3f3aaaa9f0ef68f71ff   \n",
+       "4     1756295201  0xb2991c8dd07969d09856da81c6143d2d12c84e56   \n",
+       "...          ...                                         ...   \n",
+       "7798  1750924920  0x0000000000000000000000000000000000000000   \n",
+       "7799  1750899066  0x0000000000000000000000000000000000000000   \n",
+       "7800  1750894224  0x0000000000000000000000000000000000000000   \n",
+       "7801  1750853682  0x0000000000000000000000000000000000000000   \n",
+       "7802  1750852804  0x0000000000000000000000000000000000000000   \n",
+       "\n",
+       "                                              to                   value  \\\n",
+       "0     0xe3884a72546f65944df71d7199c038270519511b       10000000000000000   \n",
+       "1     0x0000000000000000000000000000000000000000  1068275890279924972659   \n",
+       "2     0xb0e5453ed14b2e17e41d35e114f5c530bd604361   219000000000000000000   \n",
+       "3     0x0000000000000000000000000000000000000000   571550118709272009661   \n",
+       "4     0x0000000000000000000000000000000000000000    11850354755871040981   \n",
+       "...                                          ...                     ...   \n",
+       "7798  0x6e80164ea60673d64d5d6228beb684a1274bb017     1000000000000000000   \n",
+       "7799  0x83db892a6688b966122be219fa873bf24d7db79f     5000000000000000000   \n",
+       "7800  0x83db892a6688b966122be219fa873bf24d7db79f    10000000000000000000   \n",
+       "7801  0x6e80164ea60673d64d5d6228beb684a1274bb017     1000000000000000000   \n",
+       "7802  0x6e80164ea60673d64d5d6228beb684a1274bb017     1000000000000000000   \n",
+       "\n",
+       "                                       transactionHash_ block_number  \n",
+       "0     0x4606b5c80e127598a3546c1a909df5022087f658347d...      2740482  \n",
+       "1     0x16b0221286022113b3bd28e6c9c80c45195adc8db29b...      2740322  \n",
+       "2     0x7dc48d37f8ce9f9819e1d9377df4630406b513293e7e...      2740220  \n",
+       "3     0x33ac0f0c54ea241a7669c2fe2614badc1f5fb4305c92...      2739446  \n",
+       "4     0xb9d7a997bc8f5aae1d18f87ee9009ce63e4e61fccddf...      2739430  \n",
+       "...                                                 ...          ...  \n",
+       "7798  0xf94447d87f136b744db7d595d441d468fca44162c337...      1257108  \n",
+       "7799  0x6a633ddd97ece5fd9c72271c72745a20c75635f93932...      1250310  \n",
+       "7800  0xb1414979063a26c67326912e08202b38a096e43456aa...      1249036  \n",
+       "7801  0xeadd15fb5deaf6f11e2bfd1a9421ae40de826f8a5e3e...      1238184  \n",
+       "7802  0x49e08d2de4d1afa5837841699f296f82ee34e8da7d56...      1237938  \n",
+       "\n",
+       "[7803 rows x 6 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Save vaults data df\n",
     "\n",
@@ -97,9 +295,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['timestamp_', 'from', 'to', 'value', 'transactionHash_',\n",
+       "       'block_number'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vaults_df.columns"
    ]
